--- a/test/goss.yaml
+++ b/test/goss.yaml
@@ -1,32 +1,28 @@
+# test resource verification spec
 file:
-  /var/www/demo/index.html:
+  /usr/local/bin/chainlink:
     exists: true
-    mode: "0644"
+    mode: "0755"
     owner: root
     group: root
     filetype: file
-    contains:
-      - "Welcome {{.Env.DEMO_USER}}, to infinity and beyond!"
-  /etc/apache2/sites-available/demo.conf:
+  /usr/local/bin/chainlink-helper:
     exists: true
-    mode: "0644"
+    mode: "0775"
     owner: root
     group: root
     filetype: file
-    contains:
-      - "ServerName demo.01labs.net"
-  /etc/apache2/sites-enabled/demo.conf:
-    exists: true
-    mode: "0777"
-    owner: root
-    group: root
-    filetype: symlink
-http:
-  http://demo.01labs.net:
-    status: 200
-    body: [ "Welcome {{.Env.DEMO_USER}}, to infinity and beyond!" ]
-    method: GET
-service:
- apache2:
-   enabled: true
-   running: true
+package:
+  curl:
+    installed: true
+  cron:
+    installed: true
+  unzip:
+    installed: true
+  zip:
+    installed: true
+command:
+  chainlink --help:
+    exit-status: 0
+  chainlink-helper --help:
+    exit-status: 0
