fix api creds and add option to disable sslmode for postgres access

--- a/compose/.env
+++ b/compose/.env
@@ -1,6 +1,7 @@
-image=0labs/chainlink:v0.10.13
-OPERATOR_PASSWORD=topsecret
-API_USER=linknode
+image=chainlink:test
+SECURITY_OUTPUT_DIR=/mnt
+OPERATOR_PASSWORD=ABCabc123!@#$
+API_USER=linknode@example.com
 API_PASSWORD=passw0rd
 ROOT=/chainlink
 LOG_LEVEL=debug
