--- a/test/test.env
+++ b/test/test.env
@@ -1,4 +1,3 @@
-image=0labs/chainlink:v0.10.13
 SECURITY_OUTPUT_DIR=/mnt
 OPERATOR_PASSWORD=topsecret
 API_USER=linknode@example.com
@@ -9,6 +8,7 @@ ETH_CHAIN_ID=5
 MIN_OUTGOING_CONFIRMATIONS=2
 LINK_CONTRACT_ADDRESS=0x01BE23585060835E02B77ef475b0Cc51aA1e0709
 ETH_URL=ws://ethereum-rpc.goerli.01labs.net:8546
+DATABASE_URL=postgresql://postgres:passw0rd@localhost:5432/postgres?sslmode=disable
 CHAINLINK_TLS_PORT=0
 SECURE_COOKIES=false
 GAS_UPDATER_ENABLED=true
