--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,14 @@ jobs:
          - run:
               name: docker build complete image
               command: make build
+
          - run:
               name: docker build and --target test
               command: make test
+
+         - run:
+              name: test docker-compose definition
+              command: make test-compose
 
          - run:
               name: login to Dockerhub for release
@@ -18,3 +23,7 @@ jobs:
          - run:
               name: push image version to Dockerhub
               command: make release
+
+         - run:
+              name: build and push tools image version to Dockerhub
+              command: make tools
