remove save/load of cookie file and fix tooling deps + tests

--- a/compose/.env
+++ b/compose/.env
@@ -1,4 +1,4 @@
-image=chainlink:test
+image=0labs/chainlink:latest
 SECURITY_OUTPUT_DIR=/mnt
 OPERATOR_PASSWORD=ABCabc123!@#$
 API_USER=linknode@example.com
