--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 version: 2.1
 jobs:
    build:
-      machine: true
+      machine:
+          image: ubuntu-2004:202111-01
       steps:
          - checkout
          - run:
@@ -13,16 +14,16 @@ jobs:
               command: make test
 
          - run:
-              name: test docker-compose definition
-              command: make test-compose
-
-         - run:
               name: login to Dockerhub for release
               command: echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
 
          - run:
               name: push image version to Dockerhub
               command: make release
+
+         - run:
+              name: test docker-compose definition
+              command: make test-compose
 
          - run:
               name: build and push tools image version to Dockerhub
