--- a/compose/.env
+++ b/compose/.env
@@ -8,7 +8,7 @@ LOG_LEVEL=debug
 ETH_CHAIN_ID=5
 MIN_OUTGOING_CONFIRMATIONS=2
 LINK_CONTRACT_ADDRESS=0x01BE23585060835E02B77ef475b0Cc51aA1e0709
-ETH_URL=ws://ethereum-rpc.goerli.01labs.net:8546
+ETH_URL=wss://goerli.infura.io/ws/v3/4a3a6c645dc94d1b82f8f631a878e03c
 CHAINLINK_TLS_PORT=0
 SECURE_COOKIES=false
 GAS_UPDATER_ENABLED=true
